# PromptForge

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SPEC.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
docs/: api.md  architecture.md  warren-integration.md
prompt_forge/: __init__.py  config.py  main.py
prompt_forge/api/: agents.py  architect.py  audit.py  branches.py  compose.py  effectiveness.py  experiments.py  models.py  persona_prompts.py  personas.py  prompts.py  proposals.py  router.py  scan.py  subscriptions.py  usage.py  versions.py
prompt_forge/architect/: agent.py  prompts.py  tools.py
prompt_forge/cli/: __init__.py  client.py  main.py
prompt_forge/core/: analyser.py  audit.py  autonomy.py  composer.py  differ.py  events.py  registry.py  resolver.py  scanner.py  subscribers.py  vcs.py
prompt_forge/db/: client.py  models.py  persona_store.py
prompt_forge/docker/: Dockerfile  entrypoint.sh  supervisord.conf
scripts/: seed_persona_prompts.py  seed_personas.py
tests/: conftest.py  test_analyser.py  test_api_compose.py  test_api_persona_prompts.py  test_api_prompts.py  test_api_versions.py  test_architect.py  test_audit.py  test_autonomy.py  test_best_performing.py  test_branches.py  test_bug_fixes_e2e.py  test_cli.py  test_composer.py  test_differ.py  test_effectiveness.py  test_events.py  test_inheritance.py  test_models.py  test_persona_store.py  test_registry.py  test_resolver.py  test_scanner.py  test_subscriptions.py  test_usage_analytics.py  test_vcs.py  test_version_safety_e2e.py
(+11 files in other folders)
